<resources>
    <string name="app_name">나만의 단어장</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="word">단어</string>
    <string name="meaning">뜻</string>
    <string name="difficulty">난이도</string>

    <string name="difficulty_easy">쉬움</string>
    <string name="difficulty_normal">보통</string>
    <string name="difficulty_hard">어려움</string>

    <string name="add_word">단어 추가</string>

    <string name="title_add_word">새 단어 추가</string>

    <string name="confirm_message">저장하지 않고 나가시겠습니까?</string>
    <string name="exit">나가기</string>

    <string name="last_studied">최근 학습일: %s</string>
    <string name="count">맞은 횟수: %d / 틀린 횟수: %d</string>

    <string name="multiple_choice_error">객관식 문제를 풀려면 단어장에 %d개 이상의 단어가 있어야 합니다.</string>
    <string name="next_button">다음 ></string>

    <string name="result_text1">맞힌 개수/전체 개수</string>
    <string name="quiz_result">%d/%d</string>
    <string name="retry_button">다시 풀기</string>
    <string name="retry_button2">틀린 문제만 다시 풀기</string>
    <string name="finish_button">종료</string>

    <string name="goal">목표: %d</string>
    <string name="solved_quizzes">푼 문제 수: %d</string>
    <string name="goal_is_not_set">목표를 설정하세요!</string>

    <string name="set_goal_edit_hint">목표 개수…</string>
    <string name="questions_empty">풀 문제가 없습니다.</string>
</resources>