<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:labelFor="@id/edit_word"
        android:text="@string/word" />

    <EditText
        android:id="@+id/edit_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:labelFor="@id/edit_meaning"
        android:text="@string/meaning" />

    <EditText
        android:id="@+id/edit_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/difficulty" />

    <RadioGroup
        android:id="@+id/radio_group_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/difficulty_easy" />

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/difficulty_normal" />

        <RadioButton
            android:id="@+id/radio_hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/difficulty_hard" />
    </RadioGroup>

    <Button
        android:id="@+id/button_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="단어 수정" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_word_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D3D3D3"
            app:borderWidth="0dp"
            android:layout_marginRight="5dp"
            android:layout_above="@id/modify_space"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:maxImageSize="35dp"
            app:fabSize="normal"
            app:rippleColor="@color/white" />

        <Space
            android:id="@+id/modify_space"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>
</LinearLayout>